syntax = "proto3";

import "products/products.proto";


package services;

service Services{
  rpc GetService(Params) returns (Service);
  rpc GetServices(Params) returns (ServicesResponse);
  rpc NewService(Service) returns (Response);
  rpc EditService(Service) returns (Response);
  rpc DeleteService(Params) returns (Response);
}

message Service {
  string id = 1;
  string name = 2;
  string userid = 3;
  string chargetype = 4;
  float chargevalue = 5;
  string sector = 6;
}

message Params {
  products.Query query = 1;
  string id = 2;
}

message Response {
  
}

message ServicesResponse{
  repeated Service services = 1;
}